[package]
name = "xxh3"
version = "0.17.0"
edition = "2024"

[dependencies]
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rayon = "1.5"
[profile.release]
opt-level = "z"       # optimisé pour la taille
strip = true          # supprime les symboles de debug (à partir de Rust 1.60)
lto = true            # link-time optimization
codegen-units = 1     # un seul codegen unit (meilleure optimisation)
panic = "abort"       # pas de backtrace ni unwinding

[package.metadata.windows]
subsystem = "windows"